tests/test_proof/bad/output/enums_unit-empty.catala_en.Proof
[ERROR] [A.y] This variable might return an empty error:
  --> tests/test_proof/bad/enums_unit-empty.catala_en
   | 
10 |   context y content integer
   |           ^
   + Article
Counterexample generation is disabled so none was generated.
